@@ -23,6 +23,9 @@ Changelog for LedgerSMB 1.3.7
 * Reduced warnings in logs (Chris T)
 * Fixed error when batch printing timecards (Erik H)
 * Fixed menu reversal with batch printing (Erik H)
+* Removed broken edit buttons on bank account tab of contacts form (Chris T)
+* Corrected UI glitches involving adding employee contact info (Chris T)
+* Corrected missing translation call in contact template (Chris T)
 
 Changelog for LedgerSMB 1.3.6
 * Including xelatex templates under directory templates/xedemo (Chris T)
